fix emotes button z-index

--- a/src/frontend/app/chat/chat.scss
+++ b/src/frontend/app/chat/chat.scss
@@ -169,7 +169,7 @@ omd-chat {
     float: right;
     margin-top: 7px;
     right: 60px;
-    z-index: 20;
+    z-index: 5;
   }
   .card {
     border: none;
